--- a/Views/Dashboard/Overview.cshtml
+++ b/Views/Dashboard/Overview.cshtml
@@ -8,33 +8,33 @@
             <div class="ryts-9-greetings">Good afternoon Patience,</div>
             <p id="ryts-9-greeting-area2">Welcome to your Dashboard <img id="ryts-9-emoji-image" src="/Images/ryts-9-emoji.png" /></p>
         </div>
-        <div style="margin-bottom:25px">
-            <span class="ryt-small">Welcome to your Dashboard</span>
-            <img style="width:1%" src="~/images/Emoji.png">
-        </div>
-        <div class="ryt-row">
-            <span class="ryt-row ryt-col ryt-round-xlarge ryt-card-4 ryt-padding-large" style="width:47.5%;height:120px">
-                <span class="ryt-col" style="width:45%;margin-right:27.5%">
-                    <div class="ryt-small ryt-margin-bottom"> Wallet Balance</div>
-                    <div class="ryt-xlarge" style="font-weight:bold">N28,500</div>
-                </span>
-                <span class="ryt-col " style="width:27.5%">
-                    <div class="ryt-round-xxlarge ryt-card-4 ryt-padding-small ryt-center ryt-margin-bottom ryt-text-white" style="background-color: #6938EF;"><a style="color: white; " href="#">Add Money</a></div>
-                    <div class="ryt-right-align ryt-text-green">Active</div>
-                </span>
-            </span>
+    </div>
 
-
-            <span class="ryt-row ryt-col ryt-round-xlarge ryt-card-4 ryt-padding-large" style="height:120px;background-color:#FEFDF0;width:47.5%;margin-left:5%">
-                <span class="ryt-col" style="width:45%;margin-right:45%">
-                    <div class="ryt-small ryt-margin-bottom"> Total money sent</div>
-                    <div class="ryt-xlarge" style="font-weight:bold">N28,500</div>
-                </span>
-                <span class="ryt-col" style="width:10%;position:asolute">
-                    <p class="ryt-round-xxlarge" style="background-color:#FEF7C3;padding:6px"><img style="width: 100%" src="~/images/RYTS-3-send.png"></p>
-                </span>
-            </span>
+    <div class="ryts-9-wallet-panel">
+        <div class="ryts-9-balance-panel">
+            <div class="ryts-9-balance-area1">
+                <div id="ryts-9-wallet-balance">My Wallet Balance</div>
+                <button id="ryts-9-withdraw-area">Withdraw</button>
+                @* <div id="withdraw-area" >Withdraw</div> *@
+            </div>
+            <div class="ryts-9-balance-area2">
+                <p id="ryts-9-funds-area">N28,500</p>
+                <p id="ryts-9-active-area">Active</p>
+            </div>
         </div>
+
+        <div class="ryts-9-received-panel">
+            <div class="ryts-9-inner-received-panel">
+                <div class="ryts-9-money-box">
+                    <p id="ryts-9-total-money">Total money received</p>
+                    <p id="ryts-9-total-money-area">N28,500</p>
+                </div>
+                <div class="ryts-9-button-area">
+                    <img id="ryts-9-send-icon" src="/Images/ryt-9-icon.png" />
+                </div>
+            </div>
+        </div>
+    </div>
         <div class="ryt-row" style="background-color:#F5F5F5">
             <div style="font-weight:bold;margin-top:35px" class="ryt-col s12 ryt-margin-bottom">Transaction History</div>
             <div class="ryts-9-frame-transfer">
