--- a/Views/Account/ResetPassword.cshtml
+++ b/Views/Account/ResetPassword.cshtml
@@ -10,7 +10,7 @@
                     <h3>Reset Your Password</h3>
                     <div><a asp-action"Index" asp-controller="home">Return home</a></div>
                 </div>
-                <div asp-validation-summary="None"></div>
+                <div asp-validation-summary="All"></div>
                 <form  method="post" asp-action="ResetPassword" asp-controller="Account">
                     <p><input asp-for="Email" placeholder="Email"autocomplete="off" /> </p>
                     <p><input asp-for="Token" placeholder="Token" autocomplete="off" hidden /> </p>
