Fix on getting teachers record

--- a/Views/Dashboard/_Layout.cshtml
+++ b/Views/Dashboard/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/StudentDashboardListOfSchools.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/student-profile-edit.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/og-murphy-style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/EditTeacherProfile.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/TeacherChangePassword.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/teacher-funding-received.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/teacher-received-sent-history.css" asp-append-version="true" />
