--- a/Views/Shared/_SendRewardSuccessPartial.cshtml
+++ b/Views/Shared/_SendRewardSuccessPartial.cshtml
@@ -2,20 +2,15 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Send Reward</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Notification</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
-            <div class="modal-body">
-                <div class="ryts-2-font">
-                    <p class="ryts-2-p1">Money is on the way</p>
-                    <div class="ryts-2-text-wrap">
-                        <p class="ryts-2-p2">
-                            You have successfully sent N15,000
-                            to <span class="ryts-2-patience">Patience Obinna.</span> Cheers
-                        </p>
-                    </div>
-                </div>
-            </div>
+              <div style="justify-content:center; text-align:center;" >
+              <img src="~/Images/Succes-image.png" alt="Success Image">
+               </div>
+            <div class="modal-body" id="resultModalContent"></div>
+            
         </div>
     </div>
 </div>
+
